# Bookstore-2024

./: .gitignore  CMakeLists.txt  delete_program_files.py
docs/: 需求分析.md
partial_tests/: BookStorage_Test.cpp
src/: BookStorage.cpp  Bookstore.cpp
src/include/: BlockList.hpp  BookIndexManager.hpp  BookStorage.hpp  BookstoreOperation.hpp  FileOperation.hpp  FinanceStorage.hpp  LogsStorage.hpp  Operation.hpp  UserStorage.hpp
